--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,38 +12,39 @@ body {
 }
 
 button {
-  appearance: button;
-  background-color: var(--blue-600);
-  border: 1px solid var(--blue-600);
-  border-radius: 4px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  line-height: 1.15;
-  overflow: visible;
-  padding: 12px 16px;
-  position: relative;
-  text-align: center;
-  text-transform: none;
-  transition: all 80ms ease-in-out;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: fit-content;
+    font-family: "Roboto-300";
+    appearance: button;
+    background-color: var(--blue-600);
+    border: 1px solid var(--blue-600);
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    line-height: 1.15;
+    overflow: visible;
+    padding: 8px 12px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transition: all 80ms ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: max-content;
 }
 
 button:focus {
-  outline: 0;
+    outline: 0;
 }
 
 button:hover {
-  background-color: #0A46E4;
-  border-color: #0A46E4;
+    background-color: #0A46E4;
+    border-color: #0A46E4;
 }
 
 button:active {
-  background-color: #0039D7;
-  border-color: #0039D7;
+    background-color: #0039D7;
+    border-color: #0039D7;
 }
 
 button.removeButton {
@@ -61,7 +62,7 @@ button.removeButton:active {
     border-color: #c50e0e;
 }
 
-h2 {
+h1, h2 {
     margin: 0
 }
 
