--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,13 +1,14 @@
 footer {
     position: absolute;
     bottom: 0;
-    /* left: 0; */
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--primary-background);
     min-height: 50px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+
 }
 
 footer a, footer a:visited {
