--- a/src/styles/todoDisplay.css
+++ b/src/styles/todoDisplay.css
@@ -63,6 +63,8 @@
     margin-bottom: 16px;
     color: var(--slate-800);
     border-bottom: 1px solid var(--slate-500);
+    overflow-wrap: break-word;
+
 }
 
 .todoInfo {
@@ -81,6 +83,7 @@
     font-size: 1rem;
     color: var(--slate-700);
     margin-bottom: 16px;
+    overflow-wrap: break-word;
 }
 
 .todoChecklist {
@@ -89,6 +92,7 @@
     flex-direction: column;
     align-items: start;
     margin-bottom: 16px;
+    word-break: break-word;
 }
 
 .todoChecklist > div {
