todo form padding

--- a/src/styles/todoForm.css
+++ b/src/styles/todoForm.css
@@ -1,6 +1,7 @@
 form {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 8px;
     padding: 8px;
 }
@@ -9,6 +10,8 @@ form h2 {
     font-family: "Roboto-400";
     font-size: 1.7rem;
     align-self: center;
+    padding: 8px;
+    margin: 8px;
 }
 
 form label {
@@ -21,6 +24,7 @@ form > div {
     align-items: center;
     justify-content: space-between;
     gap: 8px;
+    padding: 8px;
 }
 
 form input[type="text"],
@@ -85,4 +89,8 @@ form input:focus-visible,
 
 .checklistItems input {
     font-size: 1rem;
+}
+
+.formActions button {
+    font-size: 2rem;
 }
