--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,15 +4,35 @@ header {
     justify-content: space-evenly;
     width: 100%;
     background-color: var(--primary-background);
-    padding: 16px;
+    position: sticky;
+    top: 0;
+    z-index: 99;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
                 rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
 header h1 {
+    font-family: "Roboto-500";
     font-size: 3rem;
+    padding: 8px;
 }
 
 header button {
     font-size: 1.6rem;
+    margin: 8px;
+}
+
+@media screen and (max-width: 619px){
+    header {
+        flex-direction: column;
+    }
+
+    header h1 {
+        font-size: 2.5rem;
+    }
+
+    header button {
+        font-size: 1.8rem;
+        margin-bottom: 16px;
+    }
 }
