--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,4 +1,5 @@
 footer {
+    font-family: "Roboto-300";
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -8,7 +9,17 @@ footer {
     background-color: var(--primary-background);
     min-height: 50px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    font-size: 1.2rem;
+}
 
+footer a {
+    display: flex;
+    align-items: center;
+}
+
+footer img {
+    padding-left: 8px;
+    width: 1.3rem;
 }
 
 footer a, footer a:visited {
